[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rulesteward/rulesteward"
homepage = "https://github.com/rulesteward/rulesteward"
rust-version = "1.85"

[workspace.dependencies]
rulesteward-core = { path = "crates/rulesteward-core" }
rulesteward-fapolicyd = { path = "crates/rulesteward-fapolicyd" }
ariadne = "0.6"
assert_cmd = "2"
chumsky = "0.13"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions: keep ergonomics, tune later as code lands.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
