[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rulesteward/rulesteward"
homepage = "https://github.com/rulesteward/rulesteward"
rust-version = "1.85"

[workspace.dependencies]
rulesteward-core = { path = "crates/rulesteward-core" }
rulesteward-fapolicyd = { path = "crates/rulesteward-fapolicyd" }
ariadne = "0.6"
assert_cmd = "2"
chumsky = { version = "0.13", default-features = false }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
heed = "0.22.1"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
proptest = "1"
rand = ">=0.9.3"  # documentary floor (RUSTSEC-2026-0097); only constrains a crate that opts in via `workspace = true`
serde = { version = "1", features = ["derive"] }
serde-jsonlines = "0.7"
serde_json = "1"
shlex = ">=1.3.0"  # documentary floor (pre-1.3 quoting bug); only constrains a crate that opts in via `workspace = true`
tempfile = "3"
thiserror = "2"

[workspace.lints.rust]
# `deny`, not `forbid`, so the single audited heed FFI boundary in
# rulesteward-fapolicyd/src/trustdb.rs can carry a scoped `#[allow(unsafe_code)]`
# with a `// SAFETY:` comment. heed's `EnvOpenOptions::open` is unavoidably
# `unsafe` (LMDB mmap aliasing contract); it is the ONLY unsafe in the workspace.
# Every other crate stays effectively unsafe-free (deny errors unless explicitly
# allowed). See .private-docs/session-3c-trustdb-plan.md + the session retro.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions: keep ergonomics, tune later as code lands.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
