[workspace]
members = ["crates/*"]
# The fuzz crate lives at crates/rulesteward-fapolicyd/fuzz/ and is its own
# workspace (cargo-fuzz requirement: nightly-only build).  The members glob
# `crates/*` only matches one level deep so it would NOT pick up the nested
# fuzz directory, but we state the exclusion explicitly as documentation and
# as a guard against any future glob widening.
exclude = ["crates/rulesteward-fapolicyd/fuzz", "tools/stig-update", "tools/sshd-stig-update", "tools/sshd-probe-update", "tools/fapolicyd-attr-update", "tools/fapolicyd-probe-update", "tools/auditd-stig-update"]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rulesteward/rulesteward"
homepage = "https://github.com/rulesteward/rulesteward"
rust-version = "1.88"

[workspace.dependencies]
rulesteward-core = { path = "crates/rulesteward-core" }
rulesteward-auditd = { path = "crates/rulesteward-auditd" }
rulesteward-fapolicyd = { path = "crates/rulesteward-fapolicyd" }
# default-features = false: the only consumer is `rulesteward-cli`, which gates
# libsepol behind its OWN `default` feature so a top-level `--no-default-features`
# can produce the clean Apache-2.0-only (libsepol-free) build. A workspace
# dependency must declare `default-features = false` here for a member to inherit
# it; a member cannot override the workspace value. See the cli crate's [features].
rulesteward-selinux = { path = "crates/rulesteward-selinux", default-features = false }
rulesteward-selinux-sys = { path = "crates/rulesteward-selinux-sys" }
rulesteward-sshd = { path = "crates/rulesteward-sshd" }
rulesteward-sudoers = { path = "crates/rulesteward-sudoers" }
rulesteward-sysctld = { path = "crates/rulesteward-sysctld" }
ariadne = "0.6"
assert_cmd = "2"
# JSON Schema validator (test-only): the 3e SARIF round-trip test validates rendered
# output against the bundled SARIF 2.1.0 schema. Not in the shipped binary.
boon = "0.6.1"
chumsky = { version = "0.13", default-features = false }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
# glob(7) matching + filesystem walk for sshd-E03 Include resolution. rust-lang
# official crate; sshd_config Include uses glob(7), so this matches the semantics
# we are checking rather than hand-rolling a matcher.
glob = "0.3"
# default-features=false drops heed's serde / serde-bincode / serde-json features:
# we use only `heed::types::Bytes` (raw bytes), so we do not need them, and turning
# them off removes the unmaintained `bincode 1.3.3` transitive (RUSTSEC-2025-0141).
heed = { version = "0.22.1", default-features = false }
insta = { version = "1", features = ["yaml"] }
predicates = "3"
proptest = "1"
rand = ">=0.9.3"  # documentary floor (RUSTSEC-2026-0097); only constrains a crate that opts in via `workspace = true`
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
md-5 = "0.11"
sha1 = "0.11"
serde-jsonlines = "0.7"
# SARIF 2.1.0 typed model + builders (3e `--format sarif` renderer). Pure-Rust
# (serde + serde_json), musl-clean. Do not hand-roll the SARIF object.
serde-sarif = "0.8.0"
serde_json = "1"
shlex = ">=1.3.0"  # documentary floor (pre-1.3 quoting bug); only constrains a crate that opts in via `workspace = true`
tempfile = "3"
thiserror = "2"

[workspace.lints.rust]
# `deny`, not `forbid`, so the single audited heed FFI boundary in
# rulesteward-fapolicyd/src/trustdb.rs can carry a scoped `#[allow(unsafe_code)]`
# with a `// SAFETY:` comment. heed's `EnvOpenOptions::open` is unavoidably
# `unsafe` (LMDB mmap aliasing contract); it is the ONLY unsafe in the workspace.
# Every other crate stays effectively unsafe-free (deny errors unless explicitly
# allowed). See .private-docs/session-3c-trustdb-plan.md + the session retro.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions: keep ergonomics, tune later as code lands.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Release-binary hardening (spec section 5.2: "Stripped + LTO"). Applies to every
# `--release` build, so the binary CI smoke-tests in the `musl-build` job is bit-for-bit
# the binary the release workflow ships (RuleSteward has no release-only cfg paths, so
# there is no behavioral divergence to worry about). `strip` drops the symbol table
# (~0.5 MB); fat `lto` inlines/prunes across crate boundaries for a smaller, faster
# binary. The extra link time is paid only on release builds, which are infrequent.
[profile.release]
strip = true
lto = true
