[package]
name = "rulesteward-cli"
description = "Top-level rulesteward CLI binary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
# DEFAULT-ON (#124): a plain `cargo build -p rulesteward-cli` (or any default
# workspace build) turns on the libsepol-backed `--policy` triage path by
# enabling `rulesteward-selinux`'s `authoritative-categorizer` feature, which in
# turn compiles + statically links the vendored libsepol 3.10 (LGPL-2.1). This
# bundles an LGPL obligation into the default build (see NOTICE / LICENSING.md).
#
# `cargo build -p rulesteward-cli --no-default-features` is the clean
# Apache-2.0-only build: it links NO libsepol and carries no LGPL obligation
# (guarded by the `apache-only-build` CI job). This is the ONLY libsepol-free
# build path, since `rulesteward-selinux`'s OWN `default = ["authoritative-
# categorizer"]` is a transitive default a top-level `--no-default-features`
# cannot otherwise reach (hence `default-features = false` on the dep below).
default = ["authoritative-categorizer"]
authoritative-categorizer = ["rulesteward-selinux/authoritative-categorizer"]

[lib]
name = "rulesteward_cli"
path = "src/lib.rs"

[[bin]]
name = "rulesteward"
path = "src/main.rs"

[dependencies]
rulesteward-core = { workspace = true }
rulesteward-auditd = { workspace = true }
rulesteward-fapolicyd = { workspace = true }
# The workspace declaration sets `default-features = false` for this dep (the cli
# is its only consumer), so `rulesteward-selinux`'s own
# `default = ["authoritative-categorizer"]` does NOT fire transitively. The
# libsepol/LGPL layer is instead gated behind THIS crate's `default` feature
# (above), making `--no-default-features` the clean Apache-2.0-only build.
rulesteward-selinux = { workspace = true }
rulesteward-sshd = { workspace = true }
rulesteward-sysctld = { workspace = true }
clap = { workspace = true }
ariadne = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-sarif = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
thiserror = { workspace = true }
anyhow = "1"

[dev-dependencies]
assert_cmd = { workspace = true }
boon = { workspace = true }
heed = { workspace = true }
predicates = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
# Enable the fapolicyd crate's `test-fixtures` feature for dev/test builds only,
# so e2e tests can call `write_trustdb_fixture_kv` to build trust-DB-shaped LMDB
# fixtures. The feature is off in the shipped binary (the non-dev dependency at
# the top of this file does not enable it), so this never leaks into release.
rulesteward-fapolicyd = { workspace = true, features = ["test-fixtures"] }

[lints]
workspace = true

# RPM packaging (Tier-1 distribution per spec section 5). Built by the release
# workflow via `cargo generate-rpm -p rulesteward-cli --target x86_64-unknown-linux-musl`.
# name / version / description are inherited from [package] above; `license` is
# overridden below. The static musl binary has no shared-library dependencies, so
# the auto-detected Requires set is empty (no glibc/openssl runtime deps to
# declare). Asset source paths are resolved relative to the workspace root (the
# cargo invocation cwd).
[package.metadata.generate-rpm]
# Override the RPM name: the crate is `rulesteward-cli` but the shipped binary and
# every install doc say `rulesteward`, so the package is `rulesteward-<ver>.x86_64.rpm`.
name = "rulesteward"
# Override the RPM `License:` tag (#189). The crate metadata is bare `Apache-2.0`,
# but the DEFAULT binary statically links libsepol (LGPL-2.1-or-later, #124/#135),
# so the artifact's effective license is the combination. liblmdb (OLDAP-2.8) and
# the permissive transitive set are covered by the shipped license texts + NOTICE
# (RuleSteward's established attribution policy for vendored C; see deny.toml), so
# the tag names only the two copyleft-relevant components.
license = "Apache-2.0 AND LGPL-2.1-or-later"
summary = "Read-only RHEL hardening linter for fapolicyd, SELinux, and auditd"
# Disable auto-detected Requires. cargo-generate-rpm's find-requires would emit
# `rtld(GNU_HASH)` and `/bin/sh` from the ELF, but this is a static-pie musl binary
# with zero shared-library / interpreter runtime dependencies (spec section 5.2:
# "Zero system runtime dependencies ... scp's into any air-gapped RHEL host and runs").
# Declaring that spurious interpreter dep would contradict that property, so we
# suppress auto dependency discovery. Remaining Requires are `/bin/sh` (present on
# every RHEL host) + rpmlib() format markers satisfied by rpm itself.
auto-req = "disabled"
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/rulesteward", dest = "/usr/bin/rulesteward", mode = "755" },
    { source = "dist/rulesteward.1", dest = "/usr/share/man/man1/rulesteward.1", mode = "644", doc = true },
    # LICENSE is intentionally NOT marked `doc`: minimal RHEL/Rocky hosts default
    # to `tsflags=nodocs`, which skips %doc files, but a shipped binary must always
    # carry its license. As a plain file it installs regardless of nodocs. (The man
    # page stays %doc -- genuinely optional documentation, fine to skip.)
    { source = "LICENSE", dest = "/usr/share/licenses/rulesteward/LICENSE", mode = "644" },
    # The default build statically links libsepol 3.10 (LGPL-2.1, #124), so the
    # RPM MUST also ship the LGPL-2.1 full text + the NOTICE. Plain (non-%doc)
    # files for the same reason LICENSE is: minimal RHEL/Rocky hosts default to
    # `tsflags=nodocs` (skips %doc), but a shipped binary must always carry the
    # license + notice for the LGPL-2.1 library it links.
    { source = "LICENSES/LGPL-2.1.txt", dest = "/usr/share/licenses/rulesteward/LGPL-2.1.txt", mode = "644" },
    { source = "NOTICE", dest = "/usr/share/licenses/rulesteward/NOTICE", mode = "644" },
    # liblmdb (via the LOCKED heed -> lmdb-master-sys) is statically linked into
    # EVERY build under the permissive OpenLDAP Public License v2.8 (OLDAP-2.8),
    # whose conditions 2+3 require the copyright notice + a verbatim license copy
    # to accompany binary redistribution. Plain (non-%doc) for the same nodocs
    # reason as LICENSE/LGPL above.
    { source = "LICENSES/OLDAP-2.8.txt", dest = "/usr/share/licenses/rulesteward/OLDAP-2.8.txt", mode = "644" },
    # THIRD-PARTY-LICENSES (#185): the aggregated permissive (MIT/Apache/BSD/...)
    # attribution for the statically linked Rust crates + musl libc. Unlike the
    # files above this is GENERATED (cargo-about) into dist/ by release.yml BEFORE
    # `cargo generate-rpm` runs, so the source path is dist/, not a committed file.
    # Plain (non-%doc) for the same nodocs reason as the licenses above.
    { source = "dist/THIRD-PARTY-LICENSES", dest = "/usr/share/licenses/rulesteward/THIRD-PARTY-LICENSES", mode = "644" },
]
