[package]
name = "rulesteward-fapolicyd"
description = "fapolicyd rule parser, trust-DB reader, and audit-log reader for RuleSteward."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
# `test-fixtures` exposes `write_trustdb_fixture_kv`, a public builder that writes
# arbitrary (key, raw-value) rows into a trust-DB-shaped LMDB env. Enabled by the
# CLI crate's `[dev-dependencies]` so e2e + DUPSORT tests can control the exact
# value bytes. Off by default; the shipped binary never links it.
test-fixtures = []

[dependencies]
rulesteward-core = { workspace = true }
chumsky = { workspace = true, features = ["std"] }
ariadne = { workspace = true }
heed = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
