[package]
name = "rulesteward-license"
description = "Offline JWT-based license verification for RuleSteward (post-v0.1)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lints]
workspace = true
