[package]
name = "rulesteward-selinux-sys"
description = "libsepol FFI shim for RuleSteward (statically links libsepol 3.10; #106/#107)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
# Cargo enforces a single link of the native `sepol` library across the graph and
# runs build.rs, which (only under the `vendored` feature) builds libsepol 3.10
# from the in-tree `vendor/libsepol/` source into OUT_DIR and emits
# `rustc-link-lib=static=sepol`. See build.rs + vendor/libsepol/README.txt for the
# source pin, the build recipe, and the per-target (glibc vs musl) note.
links = "sepol"
build = "build.rs"

[features]
# `vendored` builds + statically links libsepol from the in-tree source, and is
# the ONLY thing that makes build.rs compile libsepol. This crate does not list it
# as a default feature, but `rulesteward-selinux`'s `authoritative-categorizer`
# turns it on and that is DEFAULT-ON since #135 -- so via feature unification a
# default `cargo build/test --workspace` (which pulls in rulesteward-cli's
# defaults) enables `vendored` and DOES compile + statically link libsepol. The
# zero-libsepol-cost path is `--no-default-features` (or compiling this crate's
# rlib alone): `vendored` stays off, build.rs is a no-op, and an rlib links no
# native libs. The standalone `vendored` build/link smoke test
# (tests/links_from_source.rs) runs under it too.
vendored = []

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
