[package]
name = "rulesteward-selinux-sys"
description = "libsepol FFI shim for RuleSteward (statically links libsepol 3.10; #106/#107)."
version.workspace = true
edition.workspace = true
# Apache-2.0 (the crate's own Rust shim). The vendored libsepol C under
# vendor/libsepol/ -- compiled + statically linked only under the `vendored`
# feature -- is LGPL-2.1-or-later. Per RuleSteward's vendored-C attribution
# policy (see deny.toml, which mirrors the lmdb-master-sys / OLDAP-2.8 treatment)
# that obligation is met via NOTICE + LICENSES/LGPL-2.1.txt, NOT by widening this
# SPDX field or the cargo-deny allow list (#189). The redistributed RPM/binary
# names the combined license in its own RPM `License:` tag (rulesteward-cli).
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
# Cargo enforces a single link of the native `sepol` library across the graph and
# runs build.rs, which (only under the `vendored` feature) builds libsepol 3.10
# from the in-tree `vendor/libsepol/` source into OUT_DIR and emits
# `rustc-link-lib=static=sepol`. See build.rs + vendor/libsepol/README.txt for the
# source pin, the build recipe, and the per-target (glibc vs musl) note.
links = "sepol"
build = "build.rs"

[features]
# `vendored` builds + statically links libsepol from the in-tree source, and is
# the ONLY thing that makes build.rs compile libsepol. This crate does not list it
# as a default feature, but `rulesteward-selinux`'s `authoritative-categorizer`
# turns it on and that is DEFAULT-ON since #135 -- so via feature unification a
# default `cargo build/test --workspace` (which pulls in rulesteward-cli's
# defaults) enables `vendored` and DOES compile + statically link libsepol. The
# zero-libsepol-cost path is `--no-default-features` (or compiling this crate's
# rlib alone): `vendored` stays off, build.rs is a no-op, and an rlib links no
# native libs. The standalone `vendored` build/link smoke test
# (tests/links_from_source.rs) runs under it too.
vendored = []

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
