[package]
name = "rulesteward-selinux"
description = "SELinux AVC parsing and triage for RuleSteward."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
# `authoritative-categorizer` is the libsepol replay layer (P5 / #105, #124):
# the `categorize` module + the `rulesteward-selinux-sys` FFI it wraps. Now
# DEFAULT-ON (#124) so a plain `cargo build`/`cargo test -p rulesteward-cli`
# links libsepol and the `--policy` triage path is available without any
# `--features` argument. Enabling it pulls in `rulesteward-selinux-sys` AND
# turns on its `vendored` feature, which is what makes that crate's build.rs
# compile libsepol from the in-tree source and link it statically
# (#106/#107/#120). Without this feature the `-sys` rlib still compiles
# (it is a workspace member) but its build.rs is a no-op and no libsepol is
# built or linked. The #109 known-answer tests (tests/known_answer_*.rs) run
# only when this feature is built (the CI feature job per #121).
default = ["authoritative-categorizer"]
authoritative-categorizer = [
    "dep:rulesteward-selinux-sys",
    "rulesteward-selinux-sys/vendored",
]

[dependencies]
rulesteward-selinux-sys = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Test-only: the #101 corpus oracle decodes the vendored solid zstd archive of
# the three stock binary policies (policy.31/.33/.35) in-process. `tar` + `zstd`
# stream the archive; `tempfile` (already a workspace dep) holds the unpacked
# policies for the process lifetime. None ship in the binary.
tar = "0.4"
zstd = "0.13"
tempfile = { workspace = true }

[lints]
workspace = true
