[package]
name = "rulesteward-sink"
description = "EventSink trait and implementations (stdout, file, syslog) for RuleSteward."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lints]
workspace = true
