[package]
name = "rulesteward-sshd"
description = "sshd_config parser and STIG-aligned linter for RuleSteward."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
rulesteward-core = { workspace = true }
# glob(7) Include resolution for sshd-E03 (#239).
glob = { workspace = true }

[dev-dependencies]
# E03 builds present/absent include targets in a throwaway directory so its
# filesystem-resolution tests are deterministic regardless of the host.
tempfile = { workspace = true }
# Layer-2 never-panic property tests over randomized directives / Include patterns.
proptest = { workspace = true }

[lints]
workspace = true
