[package]
name = "rulesteward-sysctld"
description = "sysctl.d/sysctl.conf parser and security-baseline linter for RuleSteward."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
rulesteward-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
